crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__index__tests__compile_add.snap
---
source: crates/mlir-rs/src/dialect/index.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index, %arg1: index) -> index {
    %0 = index.add %arg0, %arg1
    return %0 : index
  }
}
