crates/tracel-mlir-rs/src/dialect/snapshots/mlir_rs__dialect__index__tests__index.castu.snap
---
source: crates/mlir-rs/src/dialect/index.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> i64 {
    %0 = index.castu %arg0 : index to i64
    return %0 : i64
  }
}
